Fix rubocop issue
An error occurred while Metrics/BlockLength cop was inspecting ...
see: https://travis-ci.org/nullobject/rein/jobs/376276510

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,8 @@ Metrics/AbcSize:
   Max: 28
 
 Metrics/BlockLength:
-  ExcludedMethods: describe
+  ExcludedMethods:
+    - describe
 
 Metrics/CyclomaticComplexity:
   Max: 7
