--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ gemfile:
   - gemfiles/activerecord_4.gemfile
   - gemfiles/activerecord_5.gemfile
   - gemfiles/activerecord_5_2.gemfile
-before_install: gem install bundler -v 1.16.1
+before_install: gem install bundler:2.0.1
 before_script: createdb -U postgres rein_test
 script: bundle exec rake test
